--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,5 @@ before_install:
   - cpanm --notest Test::Code::TidyAll 
   - cpanm --notest Test::Perl::Critic
   - cpanm --notest Test::Version
-  - apt-get -y install libpam-dev
+  - sudo apt-get install -qq libpam-dev
 
